# ttrpg-all-in-one

./: .env.local.example  .gitignore  .tool-versions  CLAUDE.md  CONTRIBUTING.md  Justfile  docker-compose.yml  last_session  manifest  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.cursor/rules/: architecture.mdc  beads.mdc
app/api/: README.md  alembic.ini  conftest.py  main.py  pyproject.toml
app/api/__test__/: test_app.py
app/api/modules/campaigns/: config.py  router.py
app/api/modules/campaigns/core/enum/: campaign_enum.py
app/api/modules/campaigns/http/router/: campaign_router.py
app/api/modules/campaigns/public_api/: campaigns_public_api.py
app/api/modules/iam/: config.py  router.py
app/api/modules/iam/http/router/: iam_router.py
app/api/modules/shared/: config.py  router.py
app/api/modules/shared/__test__/unit/: _models.py  test_base_repository.py
app/api/modules/shared/persistence/migration/: env.py
app/api/modules/shared/persistence/migration/versions/: 146138b36524_initial.py
app/api/modules/shared/persistence/repository/: base_repository.py
app/web/: index.html  package-lock.json  package.json  vitest.config.ts
app/web/src/: main.tsx  router.tsx
app/web/src/routes/: home.tsx  root-layout.tsx
app/web/src/routes/__test__/: home.test.tsx
app/web/src/stores/: ui-store.ts
docs/: ARCHITECTURE.md  PRINCIPLES.md  SCOPE.md
docs/patterns/backend/: api-layer.md  data-layer.md  integrations.md  module-design.md  testing.md
infra/centrifugo/: config.json
persistence/: alembic.ini
persistence/migrations/: env.py
persistence/migrations/versions/: 146138b36524_initial.py
persistence/var/: .gitignore
