[project]
name = "ttrpg-api"
version = "0.1.0"
description = "TTRPG platform API (modular monolith)"
readme = "app/api/README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Source layout: imports are relative to app/api/ (e.g. `modules.campaigns...`).
[tool.setuptools.packages.find]
where = ["app/api"]
namespaces = true

[tool.setuptools.package-dir]
"" = "app/api"

[tool.setuptools]
py-modules = ["main"]
