[project]
name = "ttrpg-api"
version = "0.1.0"
description = "TTRPG platform API (modular monolith)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Packages live next to this file; `modules` is a namespace package (PEP 420).
[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
py-modules = ["main"]
