[project]
name = "ttrpg-api"
version = "0.1.0"
description = "TTRPG platform API (modular monolith)"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pre-commit>=3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# Packages live next to this file; `modules` is a namespace package (PEP 420).
[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
py-modules = ["main"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
